results after changing sign of phi in simsopt (boozer_magnetic_field 837)

--- a/simsopt_with_inits.ipynb
+++ b/simsopt_with_inits.ipynb
@@ -141,13 +141,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Call tracing routine\n",
     "gc_tys, res_hits = trace_particles_boozer(\n",
-    "        field, stz_inits, -1 * vpar_inits, tmax=tmax, mass=mass, charge=charge, comm=comm,\n",
+    "        field, stz_inits, vpar_inits, tmax=tmax, mass=mass, charge=charge, comm=comm,\n",
     "        Ekin=Ekin, stopping_criteria=[MinToroidalFluxStoppingCriterion(1e-5),MaxToroidalFluxStoppingCriterion(1.0)],\n",
     "        forget_exact_path=False, mode='gc_noK',solver_options=solver_options, dt_save=1e-3/999)"
    ]
